# invariant-path

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Justfile  README.adoc  README.md  SECURITY.md  flake.nix  invariant-path  invariant-path-launcher  test_multi_root.sh
.github/workflows/: codeql.yml  hypatia-scan.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  workflow-linter.yml
crates/invariant-path-cli/: Cargo.toml
crates/invariant-path-cli/src/: main.rs
crates/invariant-path-core/: Cargo.toml
crates/invariant-path-core/benches/: multi_root_grounding.rs  pipeline_bench.rs
crates/invariant-path-core/examples/: echo_structured_loss.rs
crates/invariant-path-core/src/: annotations.rs  classifier.rs  doc_claims.rs  extractor.rs  lib.rs  model.rs  pipeline.rs
crates/invariant-path-core/tests/: echo_structured_loss.rs
desktop/: invariant-path.desktop
docs/: ARCHITECTURE.md  ECHO-TYPES.md  EXTENDING.md  tech-debt-2026-05-26.md
docs/reports/audit/: audit-2026-04-15-post.md  audit-2026-04-15-pre.md
examples/: seed_examples.md
examples/same-cube/: README.md
examples/same-cube/greet/: cafe.affine  canonical.affine  jaffa.affine  lucid.affine  pseudo.affine  rattle.affine
profiles/: echidna.md  faces.md  hypatia.md  panll.md  pmpl.md  standards-docs.md
proofs/: README.md  SameCube.agda
schemas/: annotation.schema.json
scripts/: install-desktop.sh  verify-same-cube.sh
src/ui/tea/: invariant_path_gui.affine
