# SPDX-License-Identifier: PMPL-1.0-or-later
[workspace]
resolver = "2"
members = [
  "crates/invariant-path-core",
  "crates/invariant-path-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
once_cell = "1.20"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0"
proptest = "1.6"
criterion = "0.5"
