# SPDX-License-Identifier: MPL-2.0
[workspace]
resolver = "2"
members = [
  "crates/invariant-path-core",
  "crates/invariant-path-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
once_cell = "1.20"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0"
proptest = "1.6"
criterion = "0.5"
