# SPDX-License-Identifier: MPL-2.0
[package]
name = "invariant-path-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "CLI for Invariant Path semantic overlay MVP"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
invariant-path-core = { path = "../invariant-path-core" }
