# SPDX-License-Identifier: MPL-2.0
[package]
name = "invariant-path-core"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Core extractor/classifier/storage components for Invariant Path"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "pipeline_bench"
harness = false
